Fix spacing on sidebar, remove grid

--- a/style.css
+++ b/style.css
@@ -137,17 +137,21 @@ h1 {
 
 .sidebar-links{
   display: grid;
-  grid-template-columns: 3rem 15rem;
+  grid-template-columns: 18rem;
+}
+
+.sidebar-left li{
+  padding: 10px 10px 10px 0;
+}
+
+.sidebar-left li a{
+  padding-left: 5px;
 }
 
 /* = Sidebar Left Side =  */
 
 .sidebar-left ul{
   padding-left: 20px;
-}
-
-.sidebar-left li{
-  padding: 10px 10px 10px 0;
 }
 
 .sidebar-left h3{
@@ -171,21 +175,6 @@ h1 {
   color: #099880
 }
 
-/* = Sidebar Right Side =  */
-
-.sidebar-right ul{
-  padding: 0;
-}
-
-.sidebar-right h3{
-  opacity: 0;
-}
-
-.sidebar-right li{
-  padding: 10px 0px;
-  color: #8691a3;
-}
-
 .sidebar li:hover, .sidebar a:hover{
   background-color: #30394a;
   color: #eee;
@@ -194,6 +183,7 @@ h1 {
 .active-li, .active-link{
   color: white;
   background-color: #31394a;
+  
 }
 
 /* ===== Position Container ====  */
